# chatbot-discord

./: Agente_Simples_Extração_de_Informações.json  README.md  docker-compose.yaml
discord_bot/: .env.example  Dockerfile  pyproject.toml
discord_bot/src/bot/: env_loader.py  main.py
discord_bot/tests/: test_main.py
